kclvm/tools/src/LSP/src/snapshots/kcl_language_server__inlay_hints__tests__assign_stmt_type_hint.snap
---
source: tools/src/LSP/src/inlay_hints.rs
assertion_line: 80
expression: "format!(\"{:#?}\", res)"
---
Some(
    [
        InlayHint {
            position: Position {
                line: 0,
                character: 1,
            },
            label: LabelParts(
                [
                    InlayHintLabelPart {
                        value: ": int",
                        tooltip: None,
                        location: None,
                        command: None,
                    },
                ],
            ),
            kind: None,
            text_edits: None,
            tooltip: None,
            padding_left: None,
            padding_right: None,
            data: None,
        },
        InlayHint {
            position: Position {
                line: 1,
                character: 1,
            },
            label: LabelParts(
                [
                    InlayHintLabelPart {
                        value: ": str",
                        tooltip: None,
                        location: None,
                        command: None,
                    },
                ],
            ),
            kind: None,
            text_edits: None,
            tooltip: None,
            padding_left: None,
            padding_right: None,
            data: None,
        },
        InlayHint {
            position: Position {
                line: 2,
                character: 1,
            },
            label: LabelParts(
                [
                    InlayHintLabelPart {
                        value: ": str",
                        tooltip: None,
                        location: None,
                        command: None,
                    },
                ],
            ),
            kind: None,
            text_edits: None,
            tooltip: None,
            padding_left: None,
            padding_right: None,
            data: None,
        },
        InlayHint {
            position: Position {
                line: 3,
                character: 1,
            },
            label: LabelParts(
                [
                    InlayHintLabelPart {
                        value: ": (int) -> int",
                        tooltip: None,
                        location: None,
                        command: None,
                    },
                ],
            ),
            kind: None,
            text_edits: None,
            tooltip: None,
            padding_left: None,
            padding_right: None,
            data: None,
        },
        InlayHint {
            position: Position {
                line: 10,
                character: 1,
            },
            label: LabelParts(
                [
                    InlayHintLabelPart {
                        value: ": Name",
                        tooltip: None,
                        location: None,
                        command: None,
                    },
                ],
            ),
            kind: None,
            text_edits: None,
            tooltip: None,
            padding_left: None,
            padding_right: None,
            data: None,
        },
        InlayHint {
            position: Position {
                line: 13,
                character: 2,
            },
            label: LabelParts(
                [
                    InlayHintLabelPart {
                        value: ": Name",
                        tooltip: None,
                        location: None,
                        command: None,
                    },
                ],
            ),
            kind: None,
            text_edits: None,
            tooltip: None,
            padding_left: None,
            padding_right: None,
            data: None,
        },
        InlayHint {
            position: Position {
                line: 14,
                character: 4,
            },
            label: LabelParts(
                [
                    InlayHintLabelPart {
                        value: ": any",
                        tooltip: None,
                        location: None,
                        command: None,
                    },
                ],
            ),
            kind: None,
            text_edits: None,
            tooltip: None,
            padding_left: None,
            padding_right: None,
            data: None,
        },
        InlayHint {
            position: Position {
                line: 16,
                character: 1,
            },
            label: LabelParts(
                [
                    InlayHintLabelPart {
                        value: ": str",
                        tooltip: None,
                        location: None,
                        command: None,
                    },
                ],
            ),
            kind: None,
            text_edits: None,
            tooltip: None,
            padding_left: None,
            padding_right: None,
            data: None,
        },
        InlayHint {
            position: Position {
                line: 17,
                character: 2,
            },
            label: LabelParts(
                [
                    InlayHintLabelPart {
                        value: ": [int | str]",
                        tooltip: None,
                        location: None,
                        command: None,
                    },
                ],
            ),
            kind: None,
            text_edits: None,
            tooltip: None,
            padding_left: None,
            padding_right: None,
            data: None,
        },
        InlayHint {
            position: Position {
                line: 18,
                character: 2,
            },
            label: LabelParts(
                [
                    InlayHintLabelPart {
                        value: ": {str:str}",
                        tooltip: None,
                        location: None,
                        command: None,
                    },
                ],
            ),
            kind: None,
            text_edits: None,
            tooltip: None,
            padding_left: None,
            padding_right: None,
            data: None,
        },
        InlayHint {
            position: Position {
                line: 21,
                character: 3,
            },
            label: LabelParts(
                [
                    InlayHintLabelPart {
                        value: ": number_multiplier(1Ki)",
                        tooltip: None,
                        location: None,
                        command: None,
                    },
                ],
            ),
            kind: None,
            text_edits: None,
            tooltip: None,
            padding_left: None,
            padding_right: None,
            data: None,
        },
        InlayHint {
            position: Position {
                line: 23,
                character: 4,
            },
            label: LabelParts(
                [
                    InlayHintLabelPart {
                        value: ": (any, any, any) -> any",
                        tooltip: None,
                        location: None,
                        command: None,
                    },
                ],
            ),
            kind: None,
            text_edits: None,
            tooltip: None,
            padding_left: Some(
                true,
            ),
            padding_right: Some(
                true,
            ),
            data: None,
        },
        InlayHint {
            position: Position {
                line: 27,
                character: 1,
            },
            label: LabelParts(
                [
                    InlayHintLabelPart {
                        value: ": any",
                        tooltip: None,
                        location: None,
                        command: None,
                    },
                ],
            ),
            kind: None,
            text_edits: None,
            tooltip: None,
            padding_left: Some(
                true,
            ),
            padding_right: Some(
                true,
            ),
            data: None,
        },
        InlayHint {
            position: Position {
                line: 27,
                character: 9,
            },
            label: LabelParts(
                [
                    InlayHintLabelPart {
                        value: "x: ",
                        tooltip: None,
                        location: None,
                        command: None,
                    },
                ],
            ),
            kind: None,
            text_edits: None,
            tooltip: None,
            padding_left: Some(
                true,
            ),
            padding_right: Some(
                true,
            ),
            data: None,
        },
        InlayHint {
            position: Position {
                line: 27,
                character: 12,
            },
            label: LabelParts(
                [
                    InlayHintLabelPart {
                        value: "y: ",
                        tooltip: None,
                        location: None,
                        command: None,
                    },
                ],
            ),
            kind: None,
            text_edits: None,
            tooltip: None,
            padding_left: Some(
                true,
            ),
            padding_right: Some(
                true,
            ),
            data: None,
        },
        InlayHint {
            position: Position {
                line: 27,
                character: 19,
            },
            label: LabelParts(
                [
                    InlayHintLabelPart {
                        value: "z: ",
                        tooltip: None,
                        location: None,
                        command: None,
                    },
                ],
            ),
            kind: None,
            text_edits: None,
            tooltip: None,
            padding_left: Some(
                true,
            ),
            padding_right: Some(
                true,
            ),
            data: None,
        },
    ],
)
