kclvm/tools/src/LSP/src/snapshots/kcl_language_server__inlay_hints__tests__config_key_ty_1.snap
---
source: tools/src/LSP/src/inlay_hints.rs
expression: "format! (\"{:#?}\", res)"
---
Some(
    [
        InlayHint {
            position: Position {
                line: 6,
                character: 1,
            },
            label: LabelParts(
                [
                    InlayHintLabelPart {
                        value: ": Person",
                        tooltip: None,
                        location: None,
                        command: None,
                    },
                ],
            ),
            kind: Some(
                Type,
            ),
            text_edits: Some(
                [
                    TextEdit {
                        range: Range {
                            start: Position {
                                line: 6,
                                character: 1,
                            },
                            end: Position {
                                line: 6,
                                character: 1,
                            },
                        },
                        new_text: ": Person",
                    },
                ],
            ),
            tooltip: None,
            padding_left: None,
            padding_right: None,
            data: None,
        },
        InlayHint {
            position: Position {
                line: 7,
                character: 13,
            },
            label: LabelParts(
                [
                    InlayHintLabelPart {
                        value: ": str",
                        tooltip: None,
                        location: None,
                        command: None,
                    },
                ],
            ),
            kind: Some(
                Type,
            ),
            text_edits: None,
            tooltip: None,
            padding_left: None,
            padding_right: None,
            data: None,
        },
    ],
)
