kclvm/tools/src/LSP/src/snapshots/kcl_language_server__inlay_hints__tests__schema_arg_hint.snap
---
source: tools/src/LSP/src/inlay_hints.rs
expression: "format!(\"{:#?}\", res)"
---
Some(
    [
        InlayHint {
            position: Position {
                line: 1,
                character: 5,
            },
            label: LabelParts(
                [
                    InlayHintLabelPart {
                        value: ": int",
                        tooltip: None,
                        location: None,
                        command: None,
                    },
                ],
            ),
            kind: Some(
                Type,
            ),
            text_edits: Some(
                [
                    TextEdit {
                        range: Range {
                            start: Position {
                                line: 1,
                                character: 5,
                            },
                            end: Position {
                                line: 1,
                                character: 5,
                            },
                        },
                        new_text: ": int",
                    },
                ],
            ),
            tooltip: None,
            padding_left: None,
            padding_right: None,
            data: None,
        },
        InlayHint {
            position: Position {
                line: 2,
                character: 5,
            },
            label: LabelParts(
                [
                    InlayHintLabelPart {
                        value: ": str",
                        tooltip: None,
                        location: None,
                        command: None,
                    },
                ],
            ),
            kind: Some(
                Type,
            ),
            text_edits: Some(
                [
                    TextEdit {
                        range: Range {
                            start: Position {
                                line: 2,
                                character: 5,
                            },
                            end: Position {
                                line: 2,
                                character: 5,
                            },
                        },
                        new_text: ": str",
                    },
                ],
            ),
            tooltip: None,
            padding_left: None,
            padding_right: None,
            data: None,
        },
        InlayHint {
            position: Position {
                line: 4,
                character: 1,
            },
            label: LabelParts(
                [
                    InlayHintLabelPart {
                        value: ": Person",
                        tooltip: None,
                        location: None,
                        command: None,
                    },
                ],
            ),
            kind: Some(
                Type,
            ),
            text_edits: Some(
                [
                    TextEdit {
                        range: Range {
                            start: Position {
                                line: 4,
                                character: 1,
                            },
                            end: Position {
                                line: 4,
                                character: 1,
                            },
                        },
                        new_text: ": Person",
                    },
                ],
            ),
            tooltip: None,
            padding_left: None,
            padding_right: None,
            data: None,
        },
        InlayHint {
            position: Position {
                line: 4,
                character: 11,
            },
            label: LabelParts(
                [
                    InlayHintLabelPart {
                        value: "age: ",
                        tooltip: None,
                        location: None,
                        command: None,
                    },
                ],
            ),
            kind: Some(
                Parameter,
            ),
            text_edits: None,
            tooltip: None,
            padding_left: None,
            padding_right: None,
            data: None,
        },
        InlayHint {
            position: Position {
                line: 4,
                character: 14,
            },
            label: LabelParts(
                [
                    InlayHintLabelPart {
                        value: "name: ",
                        tooltip: None,
                        location: None,
                        command: None,
                    },
                ],
            ),
            kind: Some(
                Parameter,
            ),
            text_edits: None,
            tooltip: None,
            padding_left: None,
            padding_right: None,
            data: None,
        },
    ],
)
