kclvm/tools/src/LSP/src/snapshots/kcl_language_server__inlay_hints__tests__schema_config_hint.snap
---
source: tools/src/LSP/src/inlay_hints.rs
assertion_line: 134
expression: "format!(\"{:#?}\", res)"
---
Some(
    [
        InlayHint {
            position: Position {
                line: 3,
                character: 13,
            },
            label: LabelParts(
                [
                    InlayHintLabelPart {
                        value: "People ",
                        tooltip: None,
                        location: None,
                        command: None,
                    },
                ],
            ),
            kind: None,
            text_edits: None,
            tooltip: None,
            padding_left: None,
            padding_right: None,
            data: None,
        },
        InlayHint {
            position: Position {
                line: 16,
                character: 13,
            },
            label: LabelParts(
                [
                    InlayHintLabelPart {
                        value: "Config ",
                        tooltip: None,
                        location: None,
                        command: None,
                    },
                ],
            ),
            kind: None,
            text_edits: None,
            tooltip: None,
            padding_left: None,
            padding_right: None,
            data: None,
        },
        InlayHint {
            position: Position {
                line: 14,
                character: 12,
            },
            label: LabelParts(
                [
                    InlayHintLabelPart {
                        value: "Name ",
                        tooltip: None,
                        location: None,
                        command: None,
                    },
                ],
            ),
            kind: None,
            text_edits: None,
            tooltip: None,
            padding_left: None,
            padding_right: None,
            data: None,
        },
    ],
)
